# railway-reservation-rs

./: .env  Cargo.toml  LICENSE  README.md  release.sh
db/: insert.sql  railway.mwb  recreate_db.sql
migrations/: create.sql
report/: Referat.docx  Задание КП.docx  Новая пояснительная.docx
src/: dto.rs  filters.rs  main.rs  models.rs  responders.rs  schema.rs  templates.rs
src/controllers/: account.rs  admin.rs  board.rs  buy.rs  login.rs  mod.rs  register.rs  timetable.rs
static/: index.css
static/css/: index.css
templates/: account.html  admin.html  index.html  login.html  register.html  timetable.html
templates/board/: board.html  choose_station.html
templates/buy/: carriages.html  choose_route.html  ticket.html  voyages.html
templates/timetable/: choose_route.html  voyages.html
tls/: cert.pem  key.pem
