[package]
name = "railway-reservation-rs"
version = "0.1.0"
authors = ["Artur Sinila <freesoftware@logarithmus.dev>"]
edition = "2018"

[dependencies]
yarte = { version = "0.3", features = ["with-actix-web"] }
actix-web = { version = "1.0", default-features = false, features = ["rust-tls"] }
actix-rt = "0.2"
actix-files = "0.1"
actix-identity = "0.1"
serde = { version = "1.0", features = ["derive"] }
rustls = "0.15"
r2d2 = "0.8"
diesel = { version = "1.4", features = ["mysql", "chrono", "r2d2", "numeric"] }
diesel-derive-enum = { version = "0.4", features = ["mysql"] }
chrono = "0.4"
dotenv = "0.15"
lazy_static = "1.4"
argonautica = { version = "0.2", features = ["simd"] }
futures = "0.3"
